@@ -137,7 +137,7 @@ public class UsStateController implements Serializable {
 
   public String destroy() {
     String idAsString = JsfUtil.getRequestParameter("jsfcrud.currentUsState");
-    Integer id = new Integer(idAsString);
+    Integer id = Integer.valueOf(idAsString);
     try {
       getJpaController().destroy(id);
       JsfUtil.addSuccessMessage("UsState was successfully deleted.");
